objects/CI_Certification__c.object
<CustomObject>
    <description>Used by C&amp;I</description>
    <fields>
        <fullName>AllItemsReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field that, when set to true, indicates that the Certification is ready to be submitted for approval. Set through a trigger since it should be set when all required checklist item statuses = &quot;Received&quot;</description>
        <label>AllItemsReceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only C&amp;I users may be Certification Owners</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>C&amp;I</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>C_I_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChecklistLinkId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used in the auto-creation of Certification records with their required checklist items</description>
        <externalId>true</externalId>
        <label>ChecklistLinkId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_of_Certification__c</fullName>
        <label>Month of Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>C&amp;I Certifications may only be associated with C&amp;I Opportunity records.</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>C&amp;I - AB Participation, C&amp;I - Bridge, C&amp;I - General, C&amp;I - Lender Finance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Certifications1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter_of_Certification__c</fullName>
        <formula>CASE(TEXT(Month_of_Certification__c),
&quot;01&quot;, &quot;QTR 1&quot;,
&quot;02&quot;, &quot;QTR 1&quot;,
&quot;03&quot;, &quot;QTR 1&quot;,
&quot;04&quot;, &quot;QTR 2&quot;,
&quot;05&quot;, &quot;QTR 2&quot;,
&quot;06&quot;, &quot;QTR 2&quot;,
&quot;07&quot;, &quot;QTR 3&quot;,
&quot;08&quot;, &quot;QTR 3&quot;,
&quot;09&quot;, &quot;QTR 3&quot;,
&quot;10&quot;, &quot;QTR 4&quot;,
&quot;11&quot;, &quot;QTR 4&quot;,
&quot;12&quot;, &quot;QTR 4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter of Certification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval__c</fullName>
        <formula>IF( AllItemsReceived__c, 
  IMAGE(&quot;/resource/bullet_green&quot;,&quot;Ready&quot;,16,16),
  IMAGE(&quot;/resource/bullet_RED&quot;,&quot;Not Ready&quot;,16,16)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>In Credit Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Certification__c</fullName>
        <label>Year of Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>C&amp;I Certification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;I Certifications</pluralLabel>
    <recordTypes>
        <fullName>Annual_Certification</fullName>
        <active>true</active>
        <label>Annual Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_Certification</fullName>
        <active>true</active>
        <label>Monthly Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_Certification</fullName>
        <active>true</active>
        <label>Quarterly Certification</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>